add hover info